# looplink-assignment

./: .gitignore  .pre-commit-config.yaml  README.md  TECH_NOTES.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a7015a2faba1_initial_schema_campaigns_offers_.py
backend/app/: database.py  lifecycle.py  main.py  models.py  normalize.py  scheduler.py  schemas.py
backend/app/common/: helper.py
backend/app/models/: __init__.py  campaign.py  enrollment.py  offer.py
backend/app/routers/: admin.py  campaign.py  public.py
backend/app/schemas/: __init__.py  campaign.py  enrollment.py  offer.py
backend/app/services/: campaign.py  lifecycle.py
backend/tests/: test_campaign_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: OfferEditor.jsx
frontend/src/pages/: CampaignDetail.jsx  CampaignForm.jsx  CampaignList.jsx  PublicCampaign.jsx
