[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
    "watchdog>=6.0.0",
]
